# ai-calling-agent

./: .env.example  .gitignore  Dockerfile  PRE_RELEASE_CHECKLIST.md  README.md  SCALING_GUIDE.md  SECURITY.md  URL_FLOW_DOCUMENTATION.md  alembic.ini  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_twilio_method2.py
alembic/: env.py
alembic/versions/: 001_add_address_field.py  002_update_customer_fields.py
app/: __init__.py  __main__.py  call_context.py  call_manager.py  config.py  database.py  dynamic_collection_flow.py  dynamic_prompts.py  encryption.py  logging_config.py  main.py  models.py  openai_realtime.py  prompts.py  repository.py  security.py  twilio_handler.py  twilio_service.py
deploy/: aicallingagent.service  nginx.conf
tests/: test_api.py  test_encryption.py  test_prompts.py
